[package]
name = "matching_client"
version = "0.1.0"
authors = ["jimni"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.5.5"
csv = "1.1.3"
json = "0.12.4"
http = "0.2"
reqwest = { version = "0.10", features = ["blocking"] }
itertools = "0.9.0"